--- a/samplecode/sealed-data-rust-app/app/Cargo.toml
+++ b/samplecode/sealed-data-rust-app/app/Cargo.toml
@@ -7,8 +7,9 @@ build = "build.rs"
 [dependencies]
 sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
 sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
+sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
 
 [patch.'https://github.com/apache/teaclave-sgx-sdk.git']
 sgx_types = { path = "../../../sgx_types" }
 sgx_urts = { path = "../../../sgx_urts" }
-
+sgx_tseal = { path = "../../../sgx_tseal" }
